--- a/deployment.yaml
+++ b/deployment.yaml
@@ -22,6 +22,7 @@ spec:
       containers:
         - name: qzhao
           image: qingjiezhao/qzhao-v1-log:<VERSION>
+          pullPolicy: Always
           ports:
             - containerPort: 8888
           livenessProbe:
