--- a/deployment.yaml
+++ b/deployment.yaml
@@ -25,15 +25,15 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8888
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: 8888
-            initialDelaySeconds: 2
-            periodSeconds: 2
-          readinessProbe:
-            httpGet:
-              path: /healthz
-              port: 8888
-            initialDelaySeconds: 2
-            periodSeconds: 2
+#           livenessProbe:
+#             httpGet:
+#               path: /healthz
+#               port: 8888
+#             initialDelaySeconds: 2
+#             periodSeconds: 2
+#           readinessProbe:
+#             httpGet:
+#               path: /healthz
+#               port: 8888
+#             initialDelaySeconds: 2
+#             periodSeconds: 2
